svc_default-http-backend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-14T06:07:17Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2021-08-14T06:07:17Z"
  name: default-http-backend
  namespace: app-space
  resourceVersion: "861"
  uid: dc18f004-2706-46ef-a55c-704a560b135c
spec:
  clusterIP: 10.102.118.70
  clusterIPs:
  - 10.102.118.70
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
