svc_ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-14T06:07:14Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:nodePort: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":443,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2021-08-14T06:07:14Z"
  name: ingress-service
  namespace: ingress-space
  resourceVersion: "797"
  uid: ba5f0b0b-ff05-48be-af5b-990c0c658527
spec:
  clusterIP: 10.101.40.165
  clusterIPs:
  - 10.101.40.165
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 31460
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    name: nginx-ingress
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
