svc_kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-14T06:03:00Z"
  labels:
    component: apiserver
    provider: kubernetes
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:component: {}
          f:provider: {}
      f:spec:
        f:clusterIP: {}
        f:ipFamilyPolicy: {}
        f:ports:
          .: {}
          k:{"port":443,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kube-apiserver
    operation: Update
    time: "2021-08-14T06:03:00Z"
  name: kubernetes
  namespace: default
  resourceVersion: "204"
  uid: 04686bff-b00f-4585-81f4-072f775219cb
spec:
  clusterIP: 10.96.0.1
  clusterIPs:
  - 10.96.0.1
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
