svc_video-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-14T06:07:17Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2021-08-14T06:07:16Z"
  name: video-service
  namespace: app-space
  resourceVersion: "844"
  uid: 531f3610-affa-487d-9983-470ea0e3108d
spec:
  clusterIP: 10.98.88.25
  clusterIPs:
  - 10.98.88.25
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-video
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
