svc_wear-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-14T06:07:16Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2021-08-14T06:07:16Z"
  name: wear-service
  namespace: app-space
  resourceVersion: "832"
  uid: dc079c09-5af4-4183-b9bc-e9b253076d46
spec:
  clusterIP: 10.107.84.25
  clusterIPs:
  - 10.107.84.25
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-wear
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
